# mcp-govern

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: index.html
src/mcp_govern/: barcelona.py  bde.py  bdns.py  boe.py  cgpj.py  datasets.py  datosgob.py  http.py  ine.py  pge.py  server.py  socrata.py
tests/: conftest.py  test_cgpj.py  test_clients.py  test_datasets.py  test_helpers.py  test_socrata.py  test_tools.py
tests/integration/: test_smoke.py
