[project]
name = "mcp-govern"
version = "0.1.0"
description = "MCP server per consultar dades obertes del Govern de Catalunya: contractes, subvencions, sous, pressupostos, lobbies i transparència"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-govern = "mcp_govern.server:main"
